# FuseMap

./: CLAUDE.md  README.md  app.py  baseline.sh  discgal.sh  discgal_viz.sh  druggability.sh  fix.md  niche_id.sh  outputconfig.csv  pyproject.toml  requirements.txt  setup.py  tutorial_sample_data.ipynb
agent_setup/: README.md  agent_utils.py  config.py  knowledge.py  progress_utils.py  prompt.py  supervisor_graph.py
agent_setup/agents/: atlas_agent.py  coding_agent.py  fusemap_agent.py  research_agent.py
agent_setup/atlas_data/: region_lookup.csv  sub_cell_type_annotation.csv  sub_tissue_region_annotation.csv  type_lookup.csv  unique_pairs_celltype.csv  unique_pairs_tissue.csv
agent_setup/tools/: brain_atlas_tools.py  coding_tools.py  fusemap_tool.py  supervisor_tool.py
docs/: about.rst  conf.py  index.rst  install.rst  tutorials.rst
docs/notebooks/: 2_spatial_integration_cross_tech.ipynb  3_gene_spatial_imputation.ipynb  4_map_to_new_dataset.ipynb  setup_env.sh
fusemap/: dataset.py  deconvolution.py  loss.py  preprocess.py  spatial_integrate.py  spatial_map.py  train_model.py  utils.py
output/: integrate_merfish_starmapconfig.csv  lambda_disc_single.pkl
output/integrate_merfish_starmap/: lambda_disc_single.pkl
paper_code/: README.md
paper_code/cell_cell_interation/: 1.get_cells_by_regions-main.ipynb  2.randomize_and_count_cell_cell_contacts_30um-main.ipynb  3.get_significant_contacts_30um.ipynb  4.plot_arc_diagram.ipynb  (+1 more)
scripts/: compare_discgal_baseline.py  download_data.py  druggability_analysis.py  identify_altered_niches.py  visualize_discgal.py
(+87 files in other folders)
